--- a/src/MudBlazor/Styles/components/_inputlabel.scss
+++ b/src/MudBlazor/Styles/components/_inputlabel.scss
@@ -48,7 +48,7 @@
 }
 
 
-.mud-input:focus-within + label {
+.mud-input:focus-within ~ label {
     &.mud-input-label.mud-input-label-inputcontrol {
         color: var(--mud-palette-primary);
         transform: translate(0, 1.5px) scale(0.75);
@@ -73,7 +73,7 @@
     }
 }
 
-.mud-shrink + label {
+.mud-shrink ~ label {
     &.mud-input-label.mud-input-label-inputcontrol {
         color: var(--mud-palette-text-primary);
         transform: translate(0, 1.5px) scale(0.75);
